Actions
Bug #3972
closedps - missing column separator
Status:
Resolved
Priority:
Low
Assignee:
-
Category:
cmd - userland programs
Start date:
2013-08-03
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
The output from "ps ux" and "ps aux" needs a column separator to prevent the "SZ" and "RSS" columns from bleeding together like this:
USER PID %CPU %MEM SZ RSS TT S START TIME COMMAND nobody 20334 0.0 0.14314825996 ? S Feb 29 0:00 /opt/apache22/bin/httpd -f /opt/napp/etc/httpd.conf -k start nobody 20335 0.0 0.14356426144 ? S Feb 29 0:00 /opt/apache22/bin/httpd -f /opt/napp/etc/httpd.conf -k start nobody 20336 0.0 0.14483227564 ? S Feb 29 0:00 /opt/apache22/bin/httpd -f /opt/napp/etc/httpd.conf -k start nobody 20337 0.0 0.14480427456 ? S Feb 29 0:00 /opt/apache22/bin/httpd -f /opt/napp/etc/httpd.conf -k start
Updated by Robert Mustacchi almost 9 years ago
- Status changed from Pending RTI to Resolved
Resolved in 096b23783d19eb083bccc3cbd5225b5345ca83fb.
Actions