usr/src/cmd/ps/ucbps.c
@@ -21,6 +21,7 @@
 /*
  * Copyright 2009 Sun Microsystems, Inc.  All rights reserved.
  * Use is subject to license terms.
+ * Copyright 2012, Joyent, Inc.  All rights reserved.
  */
 
 /*	Copyright (c) 1984, 1986, 1987, 1988, 1989 AT&T	*/
@@ -933,13 +934,13 @@ prcom(int found, psinfo_t *psinfo, char *psargs)
 		if (psinfo->pr_flag & SSYS)			/* SZ */
 			(void) printf("    0");
 		else if (psinfo->pr_size)
-			(void) printf("%5lu", (ulong_t)psinfo->pr_size);
+			(void) printf(" %4lu", (ulong_t)psinfo->pr_size);
 		else
 			(void) printf("    ?");
 		if (psinfo->pr_flag & SSYS)			/* RSS */
 			(void) printf("    0");
 		else if (psinfo->pr_rssize)
-			(void) printf("%5lu", (ulong_t)psinfo->pr_rssize);
+			(void) printf(" %4lu", (ulong_t)psinfo->pr_rssize);
 		else
 			(void) printf("    ?");
 	}
